# ros_z1_sim_marker

./: .gitignore  .gitmodules  CONTROL_GUIDE.md  DOCKER_CMDS.md  Dockerfile  GAZEBO_SIM_GUIDE.md  QUICK_START.md  README.md
assets/: z1-aruco-gazebo.webm  z1-aruco-rviz.webm
docs/: CONTROL_GUIDE.md  DOCKER_CMDS.md  GAZEBO_SIM_GUIDE.md  QUICKSTART.md  STARTUP.md
z1_arm_tracker/: CMakeLists.txt  package.xml
z1_arm_tracker/src/: arm_tracker_node.py
z1_aruco/: CMakeLists.txt  package.xml
z1_aruco/config/: aruco_tracking.yaml
z1_aruco/launch/: z1_aruco_tracking.launch  z1_real_camera_tracking.launch
z1_aruco/models/aruco_marker_0/: model.config  model.sdf
z1_aruco/models/aruco_marker_0/materials/scripts/: aruco_0.material
z1_aruco/models/realsense_d435/: model.config  model.sdf
z1_aruco/rviz/: z1_aruco_tracking.rviz
z1_aruco/worlds/: aruco_tracking.world  aruco_tracking_real.world
z1_aruco/xacro/: z1_aruco_robot.xacro
z1_aruco_detector/: CMakeLists.txt  package.xml
z1_aruco_detector/config/: aruco_tracking.yaml
z1_aruco_detector/src/: aruco_detector_node.py  marker_mover_node.py
